Fixes the responsive on mobile on Scroll to start text

--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ html, body {
     font-size: var(--fontsize-xs);
     width: 60%;
     height: 64px;
-    bottom: 64px;
+    bottom: 128px;
   }
 
   .text-4{
